@@ -93,6 +93,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8887. Expose storage type and storage ID in BlockLocation. (wang)
 
+    HDFS-8512. WebHDFS : GETFILESTATUS should return LocatedBlock with storage
+    type info. (xyao)
+
   OPTIMIZATIONS
 
     HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
